--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .title {
             font-size: 24px;
             margin-bottom: 20px;
-            color: #4caf50;
+            color: #15d0ff;
         }
 
         .input-container {
@@ -51,13 +51,13 @@
             font-size: 18px;
             margin: 20px 0;
             padding: 10px;
-            border: 2px dashed #4caf50;
+            border: 2px dashed #15d0ffff;
             border-radius: 5px;
             background-color: #e8f5e9;
         }
 
         .button {
-            background-color: #4caf50;
+            background-color: #15d0ffff;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -68,12 +68,12 @@
         }
 
         .button:hover {
-            background-color: #45a049;
+            background-color: #15d0ffff;
         }
 
         .note {
             font-size: 12px;
-            color: #777;
+            color: #ff1a1a;
             margin-top: 10px;
         }
     </style>
@@ -90,63 +90,63 @@
         <button class="button" onclick="generateRandomResult()">Cek Khodam</button>
         
         <div class="result" id="result">Hasil akan muncul di sini</div>
-        <div class="note">Catatan: Hasil ini bersifat acak dan untuk hiburan saja.</div>
+        <div class="note"> Suscribe Channel Youtube @RzX072 untuk info lebih lengkap.</div>
     </div>
 
     <script>
         // Fungsi untuk menghasilkan hasil acak dengan nama pengguna
         function generateRandomResult() {
             const results = [
-                "Khodam Naga Raja",
-                "Khodam Macan Putih",
-                "Khodam Harimau Siluman",
-                "Khodam Singa Kembar",
-                "Khodam Nyi Roro Kidul",
-                "Khodam Dewi Sri",
-                "Khodam Kanjeng Ratu Kidul",
-                "Khodam Sabdo Palon",
-                "Khodam Semar",
-                "Khodam Garuda",
-                "Khodam Bima",
-                "Khodam Hanoman",
-                "Khodam Kuda Sembrani",
-                "Khodam Keris Mpu Gandring",
-                "Khodam Macan Loreng",
-                "Khodam Lembu Suro",
-                "Khodam Raden Wijaya",
-                "Khodam Sultan Agung",
-                "Khodam Pangeran Diponegoro",
-                "Khodam Nyai Blorong",
-                "Khodam Ratu Laut Selatan",
-                "Khodam Sunan Kalijaga",
-                "Khodam Sunan Gunung Jati",
-                "Khodam Sunan Giri",
-                "Khodam Sunan Ampel",
-                "Khodam Sunan Muria",
-                "Khodam Syeikh Siti Jenar",
-                "Khodam Roro Jonggrang",
-                "Khodam Joko Tingkir",
-                "Khodam Prabu Siliwangi",
-                "Khodam Arya Penangsang",
-                "Khodam Gajah Mada",
-                "Khodam Ratu Tribhuwana",
-                "Khodam Dewi Kunti",
-                "Khodam Jayabaya",
-                "Khodam Ken Arok",
-                "Khodam Tunggul Ametung",
-                "Khodam Sriwijaya",
-                "Khodam Ken Dedes",
-                "Khodam Airlangga",
-                "Khodam Tunggul Wulung",
-                "Khodam Jaya Baya",
-                "Khodam Anoman",
-                "Khodam Pandu Dewanata",
-                "Khodam Gatotkaca",
-                "Khodam Wisanggeni",
-                "Khodam Damarwulan",
-                "Khodam Dewi Lanjar",
-                "Khodam Raja Singa",
-                "Khodam Prabu Angling Dharma"
+                "Naga Raja",
+                "Macan Putih",
+                "Harimau Siluman",
+                "Singa Kembar",
+                "Nyi Roro Kidul",
+                "Dewi Sri",
+                "Kanjeng Ratu Kidul",
+                "Sabdo Palon",
+                "Semar",
+                "Garuda",
+                "Bima",
+                "Hanoman",
+                "Kuda Sembrani",
+                "Keris Mpu Gandring",
+                "Macan Loreng",
+                "Lembu Suro",
+                "Raden Wijaya",
+                "Sultan Agung",
+                "Pangeran Diponegoro",
+                "Nyai Blorong",
+                "Ratu Laut Selatan",
+                "Sunan Kalijaga",
+                "Sunan Gunung Jati",
+                "Sunan Giri",
+                "Sunan Ampel",
+                "Sunan Muria",
+                "Syeikh Siti Jenar",
+                "Roro Jonggrang",
+                "Joko Tingkir",
+                "Prabu Siliwangi",
+                "Arya Penangsang",
+                "Gajah Mada",
+                "Ratu Tribhuwana",
+                "Dewi Kunti",
+                "Jayabaya",
+                "Ken Arok",
+                "Tunggul Ametung",
+                "Sriwijaya",
+                "Ken Dedes",
+                "Airlangga",
+                "Tunggul Wulung",
+                "Jaya Baya",
+                "Anoman",
+                "Pandu Dewanata",
+                "Gatotkaca",
+                "Wisanggeni",
+                "Damarwulan",
+                "Dewi Lanjar",
+                "Raja Singa",
+                "Prabu Angling Dharma"
             ];
 
             // Ambil nama dari input
@@ -160,11 +160,11 @@
 
             // Pilih hasil acak
             const randomIndex = Math.floor(Math.random() * results.length);
-            const resultText = `${username}, ${results[randomIndex]} mendampingi Anda.`;
+            const resultText = `khodam ${username} adalah ${results[randomIndex]} `;
 
             // Tampilkan hasil
             document.getElementById("result").textContent = resultText;
         }
     </script>
 </body>
-</html>
+    </html>
